<resources>
    <string name="app_name">AdditionCalculator</string>
    <string name="err_text">You can enter integer only. Check your values in these fields.</string>
    <string name="addButton_text">Add numbers</string>
    <string name="first_term">First term:</string>
    <string name="second_term">Second term:</string>
    <string name="exception">Unfortunate, something went wrong. Text of Error:</string>
</resources>