<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/secondTermText"
        android:layout_width="181dp"
        android:layout_height="27dp"
        android:layout_gravity="center_vertical"
        android:text="@string/second_term"
        android:textAlignment="gravity"
        android:textSize="18sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41" />

    <TextView
        android:id="@+id/firstTermText"
        android:layout_width="182dp"
        android:layout_height="27dp"
        android:layout_gravity="center_vertical"
        android:text="@string/first_term"
        android:textAlignment="gravity"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291" />

    <EditText
        android:id="@+id/firstTerm"
        android:layout_width="159dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="numberSigned|number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.286"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/secondTerm"
        android:layout_width="160dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="numberSigned|number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="371dp"
        android:layout_height="66dp"
        android:text="@string/addButton_text"
        app:backgroundTint="?attr/buttonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="369dp"
        android:layout_height="33dp"
        android:text="@string/err_text"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/exceptionMessage"
        android:layout_width="325dp"
        android:layout_height="30dp"
        android:text="@string/exception"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951" />

    <TextView
        android:id="@+id/exceptionText"
        android:layout_width="325dp"
        android:layout_height="30dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exceptionMessage" />

</androidx.constraintlayout.widget.ConstraintLayout>